# embeddedrustproj1

./: Cargo.toml  README.md  link.x
src/: main.rs
