[package]
name = "embeddedrustproj1"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
rp2040-hal = "0.10.2"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false

[build-dependencies] 
cc = "1.0"
